# RemoteCommandExecution

./: README.md
CMake_RemoteCommand/RemoteCommandServer/: CMakeLists.txt  RemoteServer.cpp  RemoteServer.h
CMake_RemoteCommand/RemoteCommandServer/build_linux/: CMakeCache.txt  Makefile  RemoteServer  cmake_install.cmake
CMake_RemoteCommand/RemoteCommandServer/build_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RemoteServer.sln  RemoteServer.vcxproj  RemoteServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMake_RemoteCommand/RemoteCommandServer/build_windows/RemoteServer.dir/Release/: RemoteServer.exe.recipe
CMake_RemoteCommand/RemoteCommandServer/build_windows/RemoteServer.dir/Release/RemoteServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMake_RemoteCommand/RemoteCommandServer/build_windows/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
CMake_RemoteCommand/RemoteCommandServer/build_windows/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
CMake_RemoteCommand/RemoteCommandServer/build_windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
CMake_RemoteCommand/RemoteCommandServer/build_windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
RemoteCommandClient/: RemoteCommandClient.sln
RemoteCommandServer/: RemoteCommandServer.sln
(+24 files in other folders)
